# Motolii

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MANIFESTO.ja.md  README.md  VISION.ja.md
crates/motolii-audio/: Cargo.toml
crates/motolii-audio/src/: cache.rs  convert.rs  decode.rs  device.rs  error.rs  latency.rs  lib.rs  meter.rs  mix.rs  playback.rs  producer.rs  program.rs  resample.rs  ring.rs  waveform.rs
crates/motolii-audio/tests/: d4_playback.rs  decode.rs  device_smoke.rs  mix_program.rs  playback_simulation.rs  resample.rs  support.rs
crates/motolii-cli/: Cargo.toml
crates/motolii-cli/src/: document_export.rs  lib.rs  main.rs  project.rs  verify_b4.rs
crates/motolii-cli/tests/: datatrack_export.rs  exit_demo.rs  export_project.rs  keyframe_export.rs  r9_b4_verify.rs
crates/motolii-doc/: Cargo.toml
crates/motolii-doc/src/: affine.rs  asset.rs  audio_edit.rs  bpm.rs  camera_eval.rs  command.rs  doc_keyframe.rs  doc_value.rs  duplicate.rs  effect_prepare.rs  eval_time.rs  graph.rs  ids.rs  legacy_effect_migrate.rs  lib.rs  limits.rs  migrate.rs  param.rs  param_eval.rs  param_expect.rs  pathgeom.rs  persist.rs  plugin_catalog.rs  plugin_compat.rs  plugin_resolution.rs  schema.rs  spatial_resolve.rs  stable_id.rs  track_id.rs  undo.rs  validate.rs
crates/motolii-doc/tests/: ag1_asset_components.rs  ag3_audio_commands.rs  canonical_from_core.rs  d1a_schema.rs  d1b_validate.rs  d1c_fu_open_mode.rs  d1c_fu_resource_limits.rs  d1c_persist.rs  d1d_journal.rs  d1e_migrate.rs  d1f_unknown_plugin.rs  d1h_plugin_expect_table.rs  d1h_validate.rs  d1i1_vector_recipe.rs  d1i2_pathop_geometry.rs  d1i2_pathop_validate.rs  d1i3_bezier_solver.rs  d1i3_blend_mode.rs  d1i3_lookat_follow.rs  d1i3_transform_compose.rs  d1j_comp_camera.rs  d1l_current_document.rs  d1l_effect_definition.rs  d1l_journal_v1_compat.rs  d1l_new_v1_allowlist_policy.rs  d1l_stable_id_reservation.rs  d1l_v2_lifecycle_commands.rs  d1l_writer_prepare.rs  d1m_legacy_migration.rs  d1m_public_api_closure.rs  d1m_session_lock.rs  d1m_sidecar_paths.rs  d2_command.rs  d3_eval_order.rs  d3_lookat_resolve.rs  d3e_shared_effect_eval.rs  d3f_comp_camera_eval.rs  d7_clipping_mask.rs  d8_ownership.rs  mut_document_deny.rs  (+7 more)
crates/motolii-export/: Cargo.toml
crates/motolii-export/src/: lib.rs
crates/motolii-export/tests/: ag4_audio_export.rs  d3e_preview_export_same.rs  d3f_preview_export_camera.rs  d6_audio_mux.rs  export.rs  t9_validation.rs  vism_a0i3_runtime_boundary.rs
crates/motolii-gpu/: Cargo.toml
crates/motolii-gpu/src/: ctx.rs  lib.rs  pipeline_cache.rs  transfer.rs  yuv.rs
crates/motolii-gpu/tests/: origin_guard.rs  swscale_reference.rs  vism_a3_0_fullscreen_uniform16_cache.rs  yuv_golden.rs
crates/motolii-nodes/: Cargo.toml
crates/motolii-nodes/src/: affine_place.wgsl  composite_blend.wgsl  lib.rs  mask_apply.wgsl
crates/motolii-nodes/tests/: filter_node.rs  mask_node.rs
crates/motolii-plugin/: Cargo.toml  build.rs
crates/motolii-plugin/src/: lib.rs
crates/motolii-plugin/tests/: conformance.rs  new_plugin_scaffold.rs  vism_a0i1_contract_catalog.rs  vism_a1_1_facade_exports.rs  vism_a1_1_facade_surface.rs  vism_a3_0_facade_surface.rs
crates/motolii-plugins-firstparty/: Cargo.toml
crates/motolii-plugins-firstparty/src/: lib.rs
crates/motolii-plugins-firstparty/tests/: first_party_runtime.rs  parity.rs
crates/motolii-render/: Cargo.toml
crates/motolii-render/src/: lib.rs
crates/motolii-render/tests/: cam_g0_planar_identity.rs
crates/motolii-testkit/: Cargo.toml  build.rs
crates/motolii-testkit/benches/: perf_startup.rs
crates/motolii-testkit/golden/: README.md
crates/motolii-testkit/golden_policy/: README.md  classification.tsv  migrations.tsv
crates/motolii-testkit/src/: clipping_mask.rs  lib.rs  slint_dep_policy.rs  ui_toolkit_dep_policy.rs
crates/motolii-testkit/tests/: golden_update_policy.rs  opacity_filter.rs  perf_harness.rs  protected_assets.rs  purity.rs  radial_repeater.rs  scaffold_fixture_compile.rs  skip_policy.rs  slint_dep_policy.rs  tol_literals.rs  ui_toolkit_dep_policy.rs
crates/motolii-transport/: Cargo.toml
crates/motolii-transport/src/: clock.rs  drs.rs  lib.rs  playback.rs  simulate.rs
crates/motolii-transport/tests/: d5_completion.rs  playback_shared.rs  render_integration.rs
crates/motolii-ui/: Cargo.toml  build.rs
crates/motolii-ui/fixtures/: browser-panel.json
crates/motolii-ui/src/: app.rs  browser_panel_spike.rs  command_registry.rs  diagnostic.rs  display_pool.rs  display_slot.rs  document_command_request.rs  document_edit_runtime.rs  domain_intent.rs  input_router.rs  interaction_state.rs  keymap.rs  keymap_codec.rs  layout.rs  layout_authority.rs  layout_preset.rs  layout_runtime.rs  layout_runtime_adapter.rs  lib.rs  render_worker.rs  shell.rs  state_ownership.rs  static_frame.rs  static_preview.rs
crates/motolii-ui/tests/: command_registry.rs  diagnostic.rs  document_command_request.rs  domain_intent.rs  input_router.rs  interaction_state.rs  keymap.rs  keymap_codec.rs  keymap_conformance.rs  public_boundary.rs  raw_input_boundary.rs  state_ownership.rs  u0e1_generated_tokens.rs  u1a1_gr_ui3_invariants.rs  u1a1_static_viewport.rs  u1a1_window_smoke.rs  u2b1_document_delivery.rs
crates/motoly-cli/: Cargo.toml
crates/motoly-cli/src/: lib.rs  main.rs  project.rs  verify_b4.rs
crates/motoly-cli/tests/: datatrack_export.rs  (+4 more)
crates/motoly-export/: Cargo.toml
crates/motoly-gpu/: Cargo.toml
crates/motoly-nodes/: Cargo.toml
crates/motoly-render/: Cargo.toml
crates/oc-cli/: Cargo.toml
crates/oc-export/: Cargo.toml
crates/oc-nodes/: Cargo.toml
crates/oc-render/: Cargo.toml
plugins/motolii-plugin-opacity/: Cargo.toml
plugins/motolii-plugin-radial-repeater/: Cargo.toml
spikes/g0-9-easing-popup/: Cargo.toml  README.md
spikes/g0-9-graph-view/: Cargo.toml  README.md
spikes/g0-9-surface-host/: Cargo.toml  README.md
spikes/g0-9-timeline-visual-parity/: Cargo.toml  README.md
spikes/g0-9-windowed-timeline/: Cargo.toml  README.md
spikes/ime-acceptance/: Cargo.toml  README.md
(+741 files in other folders)
