[workspace]
resolver = "2"
members = [
    "crates/motoly-core",
    "crates/motoly-eval",
    "crates/motoly-nodes",
    "crates/motoly-plugin",
    "crates/motoly-render",
    "crates/motoly-export",
    "crates/motoly-cli",
    "crates/motoly-testkit",
    "crates/motoly-media",
    "crates/motoly-gpu",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oshikaidesu/motoly"

[workspace.dependencies]
motoly-core = { path = "crates/motoly-core" }
motoly-eval = { path = "crates/motoly-eval" }
motoly-gpu = { path = "crates/motoly-gpu" }
motoly-media = { path = "crates/motoly-media" }
motoly-nodes = { path = "crates/motoly-nodes" }
motoly-plugin = { path = "crates/motoly-plugin" }
motoly-render = { path = "crates/motoly-render" }
motoly-export = { path = "crates/motoly-export" }
motoly-cli = { path = "crates/motoly-cli" }
motoly-testkit = { path = "crates/motoly-testkit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
# Slintのwgpu統合(unstable-wgpu-29)と同一メジャーに固定する。
# wgpuの更新はSlint側の対応更新に合わせてまとめて行う(落とし穴A-3改訂)。
wgpu = "29"
