[workspace]
resolver = "2"
members = [
    "crates/motolii-core",
    "crates/motolii-eval",
    "crates/motolii-nodes",
    "crates/motolii-plugin",
    "crates/motolii-render",
    "crates/motolii-export",
    "crates/motolii-cli",
    "crates/motolii-testkit",
    "crates/motolii-media",
    "crates/motolii-gpu",
    "crates/motolii-doc",
    "crates/motolii-audio",
    "crates/motolii-transport",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oshikaidesu/motolii"

[workspace.dependencies]
motolii-core = { path = "crates/motolii-core" }
motolii-eval = { path = "crates/motolii-eval" }
motolii-gpu = { path = "crates/motolii-gpu" }
motolii-media = { path = "crates/motolii-media" }
motolii-nodes = { path = "crates/motolii-nodes" }
motolii-plugin = { path = "crates/motolii-plugin" }
motolii-render = { path = "crates/motolii-render" }
motolii-export = { path = "crates/motolii-export" }
motolii-cli = { path = "crates/motolii-cli" }
motolii-testkit = { path = "crates/motolii-testkit" }
motolii-doc = { path = "crates/motolii-doc" }
motolii-audio = { path = "crates/motolii-audio" }
motolii-transport = { path = "crates/motolii-transport" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
# Slintのwgpu統合(unstable-wgpu-29)と同一メジャーに固定する。
# wgpuの更新はSlint側の対応更新に合わせてまとめて行う(落とし穴A-3改訂)。
wgpu = "29"
# M2E-6: プロパティテストの正本。エージェントはこれ以外を独断導入しない(監査EN-5)。
proptest = "1"
