[workspace]
resolver = "2"
members = [
    "plugins/motolii-plugin-opacity",
    "plugins/motolii-plugin-radial-repeater",
    "plugins/motolii-plugin-sine",
    "crates/motolii-core",
    "crates/motolii-eval",
    "crates/motolii-nodes",
    "crates/motolii-plugin",
    "crates/motolii-plugins-firstparty",
    "crates/motolii-render",
    "crates/motolii-export",
    "crates/motolii-cli",
    "crates/motolii-testkit",
    "crates/motolii-media",
    "crates/motolii-gpu",
    "crates/motolii-doc",
    "crates/motolii-audio",
    "crates/motolii-transport",
    "crates/motolii-ui",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oshikaidesu/motolii"

[workspace.dependencies]
motolii-core = { path = "crates/motolii-core" }
motolii-eval = { path = "crates/motolii-eval" }
motolii-gpu = { path = "crates/motolii-gpu" }
motolii-media = { path = "crates/motolii-media" }
motolii-nodes = { path = "crates/motolii-nodes" }
motolii-plugin = { path = "crates/motolii-plugin" }
motolii-plugin-opacity = { path = "plugins/motolii-plugin-opacity" }
motolii-plugin-radial-repeater = { path = "plugins/motolii-plugin-radial-repeater" }
motolii-plugin-sine = { path = "plugins/motolii-plugin-sine" }
motolii-plugins-firstparty = { path = "crates/motolii-plugins-firstparty" }
motolii-render = { path = "crates/motolii-render" }
motolii-export = { path = "crates/motolii-export" }
motolii-cli = { path = "crates/motolii-cli" }
motolii-testkit = { path = "crates/motolii-testkit" }
motolii-doc = { path = "crates/motolii-doc" }
motolii-audio = { path = "crates/motolii-audio" }
motolii-transport = { path = "crates/motolii-transport" }
motolii-ui = { path = "crates/motolii-ui" }
cargo_metadata = "0.23"
serde = { version = "1", features = ["derive"] }
egui = "0.35"
eframe = { version = "0.35", default-features = false, features = ["wgpu", "x11", "wayland"] }
egui-wgpu = "0.35"
egui-winit = "0.35"
egui_tiles = "0.16"
serde_json = "1"
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
# egui-wgpuとコアで同じwgpuメジャーを共有する。
# 更新時はnative textureと既存device共有を同じPRで再検証する。
wgpu = "29"
# M2E-6: プロパティテストの正本。エージェントはこれ以外を独断導入しない(監査EN-5)。
proptest = "1"
