[package]
name = "motolii-audio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Single-track PCM cache, ring-buffer playback, and cpal output (D4)"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[dependencies]
cpal = "0.15"
symphonia = { version = "0.5", features = ["aac", "flac", "mp3", "pcm", "vorbis", "wav"] }
thiserror.workspace = true

[dev-dependencies]
motolii-testkit.workspace = true
cpal = "0.15"
