[package]
name = "motolii-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
motolii-core.workspace = true
motolii-doc.workspace = true
motolii-eval.workspace = true
motolii-export.workspace = true
motolii-gpu.workspace = true
motolii-media.workspace = true
motolii-nodes.workspace = true
motolii-plugin.workspace = true
motolii-render.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
motolii-doc.workspace = true
motolii-plugin.workspace = true
motolii-render.workspace = true
motolii-testkit.workspace = true
serde_json.workspace = true
