[package]
name = "motolii-doc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Document ownership skeleton (single writer + Arc snapshot)"

[dependencies]
motolii-core.workspace = true
motolii-eval.workspace = true
motolii-nodes.workspace = true
motolii-plugin.workspace = true
motolii-render.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
motolii-gpu.workspace = true
motolii-plugin.workspace = true
motolii-testkit.workspace = true
