[package]
name = "motolii-doc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Document ownership skeleton (single writer + Arc snapshot)"

[dependencies]
motolii-core.workspace = true
motolii-eval.workspace = true
motolii-nodes.workspace = true
motolii-plugin.workspace = true
motolii-render.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
crc32fast = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
motolii-gpu.workspace = true
motolii-plugin.workspace = true
motolii-testkit.workspace = true
proptest.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
