[package]
name = "motolii-nodes"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
motolii-core.workspace = true
motolii-eval.workspace = true
motolii-gpu.workspace = true
motolii-plugin.workspace = true
bytemuck = { version = "1", features = ["derive"] }
thiserror.workspace = true
wgpu.workspace = true

[dev-dependencies]
motolii-testkit.workspace = true
