[package]
name = "motolii-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
motolii-core.workspace = true
motolii-eval.workspace = true
motolii-gpu.workspace = true
bytemuck = { version = "1", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wgpu.workspace = true
