[package]
name = "motolii-testkit"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
motolii-core.workspace = true
motolii-eval.workspace = true
motolii-gpu.workspace = true
motolii-plugin.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wgpu.workspace = true

[dev-dependencies]
motolii-plugin-opacity.workspace = true
motolii-plugin-radial-repeater.workspace = true
motolii-plugin-sine.workspace = true
motolii-plugins-firstparty.workspace = true

[[bench]]
name = "perf_startup"
harness = false
