[package]
name = "motolii-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
eframe.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
egui_tiles.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
motolii-doc.workspace = true
