[package]
name = "motoly-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
motoly-core.workspace = true
motoly-eval.workspace = true
motoly-export.workspace = true
motoly-gpu.workspace = true
motoly-media.workspace = true
motoly-nodes.workspace = true
motoly-plugin.workspace = true
motoly-render.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
motoly-plugin.workspace = true
motoly-render.workspace = true
motoly-testkit.workspace = true
serde_json.workspace = true
