[package]
name = "motoly-export"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
motoly-core.workspace = true
motoly-eval.workspace = true
motoly-gpu.workspace = true
motoly-media.workspace = true
motoly-nodes.workspace = true
motoly-plugin.workspace = true
motoly-render.workspace = true
thiserror.workspace = true

[dev-dependencies]
motoly-testkit.workspace = true
