[package]
name = "motoly-gpu"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
motoly-core.workspace = true
wgpu.workspace = true
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
motoly-testkit.workspace = true
