[package]
name = "motoly-nodes"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
motoly-core.workspace = true
motoly-eval.workspace = true
motoly-gpu.workspace = true
motoly-plugin.workspace = true
bytemuck = { version = "1", features = ["derive"] }
thiserror.workspace = true
wgpu.workspace = true

[dev-dependencies]
motoly-testkit.workspace = true
