[package]
name = "motoly-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
motoly-core.workspace = true
motoly-gpu.workspace = true
motoly-nodes.workspace = true
motoly-plugin.workspace = true
thiserror.workspace = true
wgpu.workspace = true

[dev-dependencies]
motoly-testkit.workspace = true
