[package]
name = "oc-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
oc-core.workspace = true
oc-eval.workspace = true
oc-export.workspace = true
oc-gpu.workspace = true
oc-media.workspace = true
oc-nodes.workspace = true
oc-plugin.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
oc-plugin.workspace = true
oc-render.workspace = true
oc-testkit.workspace = true
serde_json.workspace = true
