[package]
name = "oc-export"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
oc-core.workspace = true
oc-eval.workspace = true
oc-gpu.workspace = true
oc-media.workspace = true
oc-nodes.workspace = true
oc-plugin.workspace = true
oc-render.workspace = true
thiserror.workspace = true
