[package]
name = "oc-nodes"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
oc-core.workspace = true
oc-eval.workspace = true
oc-gpu.workspace = true
oc-plugin.workspace = true
bytemuck = { version = "1", features = ["derive"] }
thiserror.workspace = true
wgpu.workspace = true

[dev-dependencies]
oc-testkit.workspace = true
