[package]
name = "oc-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
oc-core.workspace = true
oc-gpu.workspace = true
oc-nodes.workspace = true
oc-plugin.workspace = true
thiserror.workspace = true
wgpu.workspace = true

[dev-dependencies]
oc-testkit.workspace = true
