[package]
name = "motolii-plugin-radial-repeater"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# A1S §2.2 / INF-7b: 公開plugin crateのpanic経路をCIで落とす。
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[dependencies]
motolii-plugin.workspace = true
