[package]
name = "g0-9-surface-host"
version = "0.1.0"
edition = "2021"
publish = false

# 製品workspaceから隔離し、公開APIや依存へ焼かない。
[workspace]

[dependencies]
accesskit = "0.24.1"
accesskit_winit = "0.33.2"
pollster = "0.4"
serde_json = "1"
thiserror = "2"
wgpu = "29"
winit = "0.30.9"
wry = "0.55.1"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.5.1"
core-graphics = { version = "0.23.2", features = ["elcapitan"] }
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = ["NSApplication", "NSEvent", "NSResponder", "NSWindow", "block2"] }
objc2-foundation = "0.2.2"
