[package]
name = "g0-9-timeline-visual-parity"
version = "0.1.0"
edition = "2021"
publish = false

# 製品workspaceから隔離し、Reactのpx値やfixture stateを公開契約へ焼かない。
[workspace]

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
glyphon = "0.11"
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "29"
winit = "0.30.9"
