[package]
name = "g0-9-windowed-timeline"
version = "0.1.0"
edition = "2021"
publish = false

# 製品workspaceから隔離し、公開API・Document・依存へ焼かない。
[workspace]

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
g0-9-surface-host = { path = "../g0-9-surface-host" }
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "29"
winit = "0.30.9"
wry = "0.55.1"
