[package]
name = "ime-acceptance"
version = "0.1.0"
edition = "2021"

# ルートworkspaceから隔離。IME審判はGUI実機のみ — 本クレートは骨格+静的検査。
[workspace]

[lib]
path = "src/checklist.rs"

[dependencies]
slint = { version = "~1.17", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-femtovg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
regex = "1"
walkdir = "2"
serde_json = "1"
